--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
